# zshistory

./: .stylish-haskell.yaml  main.hs  stack.yaml  zshistory.cabal
