name:                  zshistory
version:               0.0.0
build-type:            Simple
cabal-version:         >=1.10

executable zshistory
  main-is:             main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , conduit
                     , conduit-extra
                     , directory
                     , formatting
                     , resourcet
                     , unordered-containers
